--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   ansible-demo-build:
-    image: demo-build:1
+    image: gcr.io/rox-se/ansible-demo:latest
     container_name: demo-build
     env_file:
       - ./config.env
