--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,16 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
+      - name: Build & push new latest
         if: {{ github.ref == 'ref/head/main' }}
+        uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
         with:
           gcloud_service_key: ${{ secrets.GCR_SERVICE_ACCOUNT}}
           registry: gcr.io
           project_id: rox-se
           image_name: ansible-demo
           image_tag: ${{ github.run_number }},latest
-      - uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
+      - name: Build & push non-main branch
         if: {{ github.ref != 'ref/head/main' }}
+        uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
         with:
           gcloud_service_key: ${{ secrets.GCR_SERVICE_ACCOUNT}}
           registry: gcr.io
