Oh, that syntax.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build & push new latest
-        if: {{ github.ref == 'ref/head/main' }}
+        if: ${{ github.ref == 'ref/head/main' }}
         uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
         with:
           gcloud_service_key: ${{ secrets.GCR_SERVICE_ACCOUNT}}
@@ -15,7 +15,7 @@ jobs:
           image_name: ansible-demo
           image_tag: ${{ github.run_number }},latest
       - name: Build & push non-main branch
-        if: {{ github.ref != 'ref/head/main' }}
+        if: ${{ github.ref != 'ref/head/main' }}
         uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
         with:
           gcloud_service_key: ${{ secrets.GCR_SERVICE_ACCOUNT}}
