--- a/playbooks/roles/demo/tasks/main.yml
+++ b/playbooks/roles/demo/tasks/main.yml
@@ -3,6 +3,8 @@
 - include_tasks: violation_policies.yml
 # - include_tasks: slack.yml
 - include_tasks: deploy_demos.yml
+- name: Network anomalies
+  include_tasks: network_anomalies.yml
 - name: Baseline processes
   include_tasks: baseline_processes.yml
 - include_tasks: setup_auth0.yml
