Add OpenShift namespaces to policies

--- a/playbooks/roles/demo/tasks/main.yml
+++ b/playbooks/roles/demo/tasks/main.yml
@@ -7,4 +7,8 @@
   include_tasks: network_anomalies.yml
 - name: Baseline processes
   include_tasks: baseline_processes.yml
+- name: Add OpenShift policy exceptions
+  include_tasks: openshift_policy_fix.yml
+  when: 
+    orchestrator == "openshift"
 - include_tasks: setup_auth0.yml
