Install Pipelines & demo

--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -34,3 +34,7 @@
   tasks:
     - import_role:
         name: demo
+    - import_role:
+        name: pipelines
+      when:
+        orchestrator == "openshift"
