--- a/playbooks/roles/demo/tasks/deploy_demos.yml
+++ b/playbooks/roles/demo/tasks/deploy_demos.yml
@@ -1,6 +1,7 @@
 - name: Get demos
   find:
-    paths: roles/demo/files/demos
+    paths: 
+      - roles/demo/files/demos
     recurse: yes
     patterns: '*.yaml'
   register: demo_yamls
