--- a/playbooks/roles/pipelines/files/config/2-rox-deployment-check-task.yml
+++ b/playbooks/roles/pipelines/files/config/2-rox-deployment-check-task.yml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: ClusterTask
 metadata:
-  name: rox-image-check
+  name: rox-deployment-check
   namespace: pipeline-demo
 spec:
   params:
@@ -11,14 +11,19 @@ spec:
     - name: rox_api_token
       type: string
       description: Secret containing the StackRox API token with CI permissions
-    - name: image
+    - name: file
       type: string
-      description: Full name of image to scan (example -- gcr.io/rox/sample:5.0-rc1)
+      description: YAML file in the deployfiles workspace
   results:
       - name: check_output
-        description: Output of `roxctl image check`
+        description: Output of `roxctl deployment check`
+  workspaces:
+    - name: deployfiles
+      description: |
+        The folder containing deployment files
+      mountPath: /deployfile
   steps:
-    - name: rox-image-check
+    - name: rox-deployment-check
       image: centos
       env:
         - name: ROX_API_TOKEN
@@ -34,6 +39,7 @@ spec:
       script: |
         #!/usr/bin/env bash
         set +x
+        cat /deployfile/deploy.yml
         curl -k -L -H "Authorization: Bearer $ROX_API_TOKEN" https://$ROX_CENTRAL_ENDPOINT/api/cli/download/roxctl-linux --output ./roxctl  > /dev/null; echo "Getting roxctl"
         chmod +x ./roxctl  > /dev/null
-        ./roxctl image check --insecure-skip-tls-verify -e $ROX_CENTRAL_ENDPOINT --image $(params.image) 
+        ./roxctl deployment check --insecure-skip-tls-verify -e $ROX_CENTRAL_ENDPOINT -f /deployfile/$(params.file) 
