Fix for policies in 3.0.56

--- a/playbooks/roles/demo/tasks/openshift_policy_fix.yml
+++ b/playbooks/roles/demo/tasks/openshift_policy_fix.yml
@@ -33,5 +33,6 @@
     force_basic_auth: true
     validate_certs: no
   loop: "{{ policy_details.results }}"
+  when: item.json.id exists
   loop_control: 
     label: "{{ item.item.name }}"
