--- a/playbooks/roles/demo/vars/main.yml
+++ b/playbooks/roles/demo/vars/main.yml
@@ -88,7 +88,16 @@ openshift_policy_fixes:
   - name: "Ensure that the host's IPC namespace is not shared"
     namespaces:
       - openshift-cluster-node-tuning-operator
+  - name: "Docker CIS 5.16: Ensure that the host's IPC namespace is not shared"
+    namespaces:
+      - openshift-cluster-node-tuning-operator
   - name: "Ensure that the host's process namespace is not shared"
+    namespaces:
+      - openshift-cluster-node-tuning-operator
+      - openshift-machine-config-operator
+      - openshift-monitoring
+      - openshift-sdn
+  - name: "Docker CIS 5.15: Ensure that the host's process namespace is not shared"
     namespaces:
       - openshift-cluster-node-tuning-operator
       - openshift-machine-config-operator
