--- a/playbooks/roles/central/tasks/central.yml
+++ b/playbooks/roles/central/tasks/central.yml
@@ -50,3 +50,16 @@
   delay: 20
   when:
     orchestrator == "openshift"
+
+- name: Wait for Central availability
+  uri:
+    url: "{{ central_url }}/v1/ping"
+    method: GET
+    user: admin
+    password: "{{ admin_password }}"
+    force_basic_auth: true
+    validate_certs: no  
+  register: result
+  until: result.status == 200
+  retries: 8
+  delay: 20
