--- a/sample.env
+++ b/sample.env
@@ -4,5 +4,6 @@ CENTRAL_PORT=443
 ADMIN_PASSWORD=<admin password for central>
 ORCHESTRATOR=<k8s or openshift>
 STACKROX_LICENSE=<license string>
-IMAGE_PULL_USER=<email with permissions to pull from StackRox registry>
+IMAGE_PULL_USER=<account with permissions to pull from registry>
 IMAGE_PULL_PASSWORD=<password for image pull account>
+IMAGE_REGISTRY=quay.io/rhacs
