--- a/playbooks/roles/demo/tasks/image_pull_secret.yml
+++ b/playbooks/roles/demo/tasks/image_pull_secret.yml
@@ -13,14 +13,11 @@
   - medical
   - operations
   - payments
+  
 - name: Create image pull secret
-  shell: '{{ orchestrator_tool }} 
-    create secret generic gcrcred \
-    --from-file=.dockerconfigjson=files/config.json \
-    --type=kubernetes.io/dockerconfigjson \
-    --namespace {{ item }} --dry-run  -o yaml | \
-    {{ orchestrator_tool }} \
-    apply -f -'
+  community.kubernetes.k8s:
+    state: present
+    definition: "{{ lookup('template', 'templates/pull_secret/pullsecret.yml.j2') | from_yaml_all }}"
   environment:
     KUBECONFIG: "{{ kubeconfig }}"
   loop:
