--- a/playbooks/roles/demo/files/demos/operations/everything.yaml
+++ b/playbooks/roles/demo/files/demos/operations/everything.yaml
@@ -45,9 +45,9 @@ spec:
         secret:
           secretName: ssh-keys
       imagePullSecrets:
-      - name: gcrcred
+      - name: rhacs-demo-pull-pull-secret
       containers:
-      - image: gcr.io/rox-se/srox/jump-host:latest
+      - image: quay.io/rhacs-demo/jump-host:latest
         command: ["/bin/entrypoint"]
         args: ["-listen", "22", "-connect", "pupper-master-service.operations.svc.cluster.local:8140,visa-processor-service.payments.svc.cluster.local:8080,patient-db-service.medical.svc.cluster.local:8080"]
         imagePullPolicy: Always
@@ -87,7 +87,7 @@ metadata:
   labels:
     app: puppet-master
   imagePullSecrets:
-  - name: gcrcred
+  - name: rhacs-demo-pull-pull-secret
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -144,14 +144,14 @@ spec:
        app: puppet-master
     spec:
       imagePullSecrets:
-      - name: gcrcred
+      - name: rhacs-demo-pull-pull-secret
       serviceAccountName: puppet-master
       volumes:
       - hostPath:
           path: /var/run/docker.sock
         name: var-run-docker-sock
       containers:
-      - image: gcr.io/rox-se/srox/netflow:latest
+      - image: quay.io/rhacs-demo/netflow:latest
         command: ["/bin/sh"]
         args: ["-c", "/usr/bin/apt-get install nmap; /bin/nmap -Pn 10.0.0.0/24; /bin/entrypoint -listen 8140"]
         imagePullPolicy: Always
