use kubeconfig arg to community.kubernetes.k8s

--- a/playbooks/roles/demo/tasks/image_pull_secret.yml
+++ b/playbooks/roles/demo/tasks/image_pull_secret.yml
@@ -18,8 +18,7 @@
   community.kubernetes.k8s:
     state: present
     definition: "{{ lookup('template', 'templates/pull_secret/pullsecret.yml.j2') | from_yaml_all }}"
-  environment:
-    KUBECONFIG: "{{ kubeconfig }}"
+    kubeconfig: "{{ kubeconfig }}"
   loop:
   - backend
   - frontend
