--- a/playbooks/roles/demo/tasks/image_pull_secret.yml
+++ b/playbooks/roles/demo/tasks/image_pull_secret.yml
@@ -2,7 +2,7 @@
 # using --dry-run | kubectl apply here to prevent fail if secrets already exist
 - name: Create namespaces
   shell: '{{ orchestrator_tool }}'
-    create ns {{ item }} --dry-run  -o yaml | \
+    create ns {{ item }} --dry-run=client  -o yaml | \
     {{ orchestrator_tool }} \
     apply -f -'
   environment:
