--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -38,6 +38,7 @@
         ocp4_workload_authentication_htpasswd_user_count: 10
         ocp4_workload_authentication_admin_user: admin
         ocp4_workload_authentication_remove_kubeadmin: true
+        ansible_user: lab-user
 
     - name: Installing on k8s
       set_fact:
