--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -42,6 +42,7 @@
         ocp4_workload_authentication_admin_user: admin
         ocp4_workload_authentication_remove_kubeadmin: true
         ansible_user: lab-user
+        cloud_provider: none
 
     - name: Installing on k8s
       set_fact:
