--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -24,8 +24,8 @@
         auth_client_id: "{{ lookup('env', 'AUTH_CLIENT_ID') }}"
         auth_domain: "{{ lookup('env', 'AUTH_DOMAIN') }}"
         stackrox_license: "{{ lookup('env', 'STACKROX_LICENSE') }}"
-        imagepulluser: "{{ lookup('env', 'IMAGE_PULL_USER') }}"
-        imagepullpassword: "{{ lookup('env', 'IMAGE_PULL_PASSWORD') }}"
+        ocp4_workload_stackrox_central_imagepulluser: "{{ lookup('env', 'IMAGE_PULL_USER') }}"
+        ocp4_workload_stackrox_central_imagepullpassword: "{{ lookup('env', 'IMAGE_PULL_PASSWORD') }}"
         imageregistry: "{{ lookup('env', 'IMAGE_REGISTRY') | default('', True) }}"
         platformplus: "{{ lookup('env', 'PLATFORM_PLUS') | default('', False) }}"
         ACTION: "{{ lookup('env', 'ACTION') | default('', 'create') }}"
