--- a/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/payments/everything.yaml
+++ b/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/payments/everything.yaml
@@ -206,7 +206,7 @@ metadata:
     app: mastercard-processor
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
